BUG#19304: Merge handler allowed in partitioned tables